Issue #32 All Rule Type Editor should extend BaseRuleEditor View

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <div class="buttons-container">
-          <a id="save-redirect-rule" class="btn btn-success">Save</a>
+          <a class="btn btn-success save-rule">Save</a>
           <a href="#" class="btn btn-default">Cancel</a>
         </div>
       </section>
@@ -187,7 +187,7 @@
         </div>
 
         <div class="buttons-container">
-          <a id="save-cancel-rule" class="btn save-button">Save</a>
+          <a class="btn save-button save-rule">Save</a>
           <a href="#" class="btn btn-default">Cancel</a>
         </div>
       </section>
@@ -256,7 +256,7 @@
         </div>
 
         <div class="buttons-container">
-          <a id="save-replace-rule" class="btn save-button">Save</a>
+          <a class="btn save-button save-rule">Save</a>
           <a href="#" class="btn btn-default">Cancel</a>
         </div>
       </section>
@@ -340,6 +340,7 @@
     <script type="text/javascript" src="/src/pages/js/collections/RulesCollection.js"></script>
 
     <!-- Backbone Views -->
+    <script type="text/javascript" src="/src/pages/js/views/BaseRuleEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/RedirectRuleEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/CancelRuleEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/ReplaceRuleEditorView.js"></script>
