Added modify header card on rule selection screen

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -304,6 +304,18 @@
             Replace host name in a URL
           </div>
         </div>
+
+        <div class="panel panel-modifyHeaders-rule" data-target="#new/modifyHeaders">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+              <span>Modify Headers</span>
+              <span class="glyphicon glyphicon-ok select-icon"></span>
+            </h3>
+          </div>
+          <div class="panel-body">
+            Modify HTTP headers in request and response
+          </div>
+        </div>
       </section>
     </script>
 
