@trivial Added comment for cancel rule editor

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -132,6 +132,7 @@
     </script>
     <!-- End of Redirect Rule Editor Template -->
 
+    <!-- Cancel Rule Editor -->
     <script type="text/template" id="cancel-rule-editor-template">
       <nav class="rule-header">
         <span>Cancel Request Rule</span>
