--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -106,22 +106,27 @@
                 <option value="<%= RQ.RULE_OPERATORS.CONTAINS %>" <% if(source.operator === RQ.RULE_OPERATORS.CONTAINS) { %> selected <% } %> >
                   Contains
                 </option>
+                <option value="<%= RQ.RULE_OPERATORS.MATCHES %>" <% if(source.operator === RQ.RULE_OPERATORS.MATCHES) { %> selected <% } %> >
+                  Matches
+                </option>
               </select>
             </div>
 
+            <% var placeholder = rule.getPlaceholder({field: 'source', operator: source.operator});%>
             <% _.each(source.values, function(value, index) { %>
-                <div class="source-value-container">
-                  <input type="url" class="form-control source-url-input"
-                     placeholder="e.g. http://www.yahoo.com/" value="<%=value%>" data-index="<%=index%>"/>
-                </div>
+              <div class="source-value-container">
+                <input type="url" class="form-control source-url-input"
+                  placeholder="<%=placeholder%>" value="<%=value%>" data-index="<%=index%>"/>
+              </div>
             <% }); %>
           </div>
         </div>
 
+        <% placeholder = rule.getPlaceholder({field: 'destination', operator: source.operator});%>
         <div class="input-group destination-container">
           <span class="input-group-addon">Destination</span>
           <input type="url" class="form-control destination-url-input"
-             placeholder="e.g. http://www.google.com/" value="<%=rule.getDestination()%>">
+             placeholder="<%=placeholder%>" value="<%=rule.getDestination()%>">
         </div>
 
         <div class="buttons-container">
@@ -454,6 +459,7 @@
     <script type="text/javascript" src="/src/libs/backbone-1.1.2.js"></script>
 
     <script type="text/javascript" src="/src/Shared/shared.js"></script>
+    <script type="text/javascript" src="/src/Shared/utils.js"></script>
 
     <!-- Utils and Components -->
     <script type="text/javascript" src="/src/pages/js/components/notification.js"></script>
