Issue #33: Destination Url needs protocol | Added Validation mixin | Updated Cancel Rule Editor

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -465,6 +465,8 @@
     <script type="text/javascript" src="/src/pages/js/components/notification.js"></script>
     <script type="text/javascript" src="/src/pages/js/components/FileHandler.js"></script>
 
+    <script type="text/javascript" src="/src/pages/js/app.js"></script>
+
     <!-- Backbone Models -->
     <script type="text/javascript" src="/src/pages/js/models/BaseRuleModel.js"></script>
     <script type="text/javascript" src="/src/pages/js/models/RedirectRuleModel.js"></script>
@@ -475,6 +477,9 @@
     <!-- Backbone Collections -->
     <script type="text/javascript" src="/src/pages/js/collections/RulesCollection.js"></script>
 
+    <!-- Mixins -->
+    <script type="text/javascript" src="/src/pages/js/mixins/InputFieldsValidation.js"></script>
+
     <!-- Backbone Views -->
     <script type="text/javascript" src="/src/pages/js/views/BaseRuleEditorView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/RedirectRuleEditorView.js"></script>
@@ -484,7 +489,6 @@
     <script type="text/javascript" src="/src/pages/js/views/RuleIndexView.js"></script>
     <script type="text/javascript" src="/src/pages/js/views/RuleCardsView.js"></script>
 
-    <script type="text/javascript" src="/src/pages/js/app.js"></script>
     <script type="text/javascript" src="/src/pages/js/router.js"></script>
     <script type="text/javascript" src="/src/pages/js/init.js"></script>
   </body>
