--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -473,7 +473,19 @@
       <span class="rq-line">Play with Network Requests</span>
     </div>
 
-    <div id="content" class="content"></div>
+    <div id ="page" class="page">
+      <div id="content" class="content"></div>
+      <div id="footer" class="footer">
+        <span class="message">
+          <span class="footer-title">Tip! </span>
+          <span>Do you know </span>
+          <span class="rq-white">Request</span><span class="rq-blue">ly</span>
+          <span>is an Open Source Project ?</span>
+          <a id="forkme_banner" class="rq-banner"
+             href="https://github.com/blunderboy/requestly" target="_blank">View on GitHub</a>
+        </span>
+      </div>
+    </div>
 
     <!-- Load all scripts here  -->
     <script type="text/javascript" src="/src/libs/jquery-1.9.1.js"></script>
