Updated styles and link of github repo anchor element

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -482,7 +482,7 @@
           <span class="rq-white">Request</span><span class="rq-blue">ly</span>
           <span>is an Open Source Project ?</span>
           <a id="forkme_banner" class="rq-banner"
-             href="https://github.com/blunderboy/requestly" target="_blank">View on GitHub</a>
+             href="http://bit.ly/requestly-github-repo" target="_blank">View on GitHub</a>
         </span>
       </div>
     </div>
