Issue #18 [2] Include Handlebars and write Grunt task to precompile templates

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -491,6 +491,7 @@
     <script type="text/javascript" src="/src/libs/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="/src/libs/underscore-1.6.0.js"></script>
     <script type="text/javascript" src="/src/libs/backbone-1.1.2.js"></script>
+    <script type="text/javascript" src="/src/libs/handlebars.runtime-v3.0.3.js"></script>
 
     <script type="text/javascript" src="/src/Shared/shared.js"></script>
     <script type="text/javascript" src="/src/Shared/utils.js"></script>
@@ -500,6 +501,9 @@
     <script type="text/javascript" src="/src/pages/js/components/FileHandler.js"></script>
 
     <script type="text/javascript" src="/src/pages/js/app.js"></script>
+
+    <!-- Handlebars Template File -->
+    <script type="text/javascript" src="/src/pages/templates.js"></script>
 
     <!-- Backbone Models -->
     <script type="text/javascript" src="/src/pages/js/models/BaseRuleModel.js"></script>
