--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -62,81 +62,6 @@
       </section>
     </script>
 
-    <!-- Redirect Rule Editor Template -->
-    <script type="text/template" id="redirect-rule-editor-template">
-      <nav class="rule-header rq-green">
-        <span>Redirect Request Rule</span>
-      </nav>
-      <section class="rule-body">
-        <div class="input-group name-container">
-          <span class="input-group-addon">Rule Name</span>
-          <input type="text" class="form-control rule-name-input" placeholder="" value="<%=rule.getName()%>">
-        </div>
-
-        <% var status = rule.getStatus() %>
-        <div class="rule-status-container">
-          <span class="title">Status</span>
-          <span class="dropdown-container">
-            <select class="rule-status-select">
-              <option value="<%= RQ.RULE_STATUS.ACTIVE %>" "<% if(status === RQ.RULE_STATUS.ACTIVE) { %> selected <% } %>">
-              Active
-              </option>
-              <option value="<%= RQ.RULE_STATUS.INACTIVE %>" <% if(status === RQ.RULE_STATUS.INACTIVE) { %> selected <% } %> >
-              Inactive
-              </option>
-            </select>
-          </span>
-        </div>
-
-        <div class="description-container">
-          <div class="title">Rule Description (Optional)</div>
-          <textarea class="rule-description"
-            placeholder="e.g. Redirecting app.js on qa environment to dev environment"><%=rule.getDescription()%></textarea>
-        </div>
-
-        <div class="source-container">
-          <% var source = rule.getSource(); %>
-          <div class="title">Source</div>
-          <div class="well well-sm">
-            <div class="dropdown-container">
-              <select class="rule-operator-select">
-                <option value="<%= RQ.RULE_OPERATORS.EQUALS %>" "<% if(source.operator === RQ.RULE_OPERATORS.EQUALS) { %> selected <% } %>">
-                  Equals
-                </option>
-                <option value="<%= RQ.RULE_OPERATORS.CONTAINS %>" <% if(source.operator === RQ.RULE_OPERATORS.CONTAINS) { %> selected <% } %> >
-                  Contains
-                </option>
-                <option value="<%= RQ.RULE_OPERATORS.MATCHES %>" <% if(source.operator === RQ.RULE_OPERATORS.MATCHES) { %> selected <% } %> >
-                  Matches
-                </option>
-              </select>
-            </div>
-
-            <% var placeholder = rule.getPlaceholder({field: 'source', operator: source.operator});%>
-            <% _.each(source.values, function(value, index) { %>
-              <div class="source-value-container">
-                <input type="url" class="form-control source-url-input"
-                  placeholder="<%=placeholder%>" value="<%=value%>" data-index="<%=index%>"/>
-              </div>
-            <% }); %>
-          </div>
-        </div>
-
-        <% placeholder = rule.getPlaceholder({field: 'destination', operator: source.operator});%>
-        <div class="input-group destination-container">
-          <span class="input-group-addon">Destination</span>
-          <input type="url" class="form-control destination-url-input"
-             placeholder="<%=placeholder%>" value="<%=rule.getDestination()%>">
-        </div>
-
-        <div class="buttons-container">
-          <a class="btn btn-success save-rule">Save</a>
-          <a href="#" class="btn btn-default">Cancel</a>
-        </div>
-      </section>
-    </script>
-    <!-- End of Redirect Rule Editor Template -->
-
     <!-- Cancel Rule Editor -->
     <script type="text/template" id="cancel-rule-editor-template">
       <nav class="rule-header">
@@ -501,6 +426,10 @@
     <script type="text/javascript" src="/src/pages/js/components/FileHandler.js"></script>
 
     <script type="text/javascript" src="/src/pages/js/app.js"></script>
+
+    <!-- Template Helper File -->
+    <script type="text/javascript" src="/src/pages/js/templateHelpers/handlebarHelpers.js"></script>
+    <script type="text/javascript" src="/src/pages/js/templateHelpers/templateHelper.js"></script>
 
     <!-- Handlebars Template File -->
     <script type="text/javascript" src="/src/pages/templates.js"></script>
