--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,7 +28,12 @@
       <section class="rule-index">
         <table class="table table-striped">
           <thead>
-          <tr><th>Name & Description</th><th>Type</th><th>Status</th><th>Created on</th><th></th></tr>
+            <tr>
+              <th>Name & Description</th>
+              <th>Status</th>
+              <th>Created on</th>
+              <th></th>
+            </tr>
           </thead>
           <tbody>
           <% _.each(rules, function(rule, index) {
@@ -43,9 +48,9 @@
           <tr class="rule-item-row <%=ruleType.toLowerCase()%>" data-id="<%=id%>">
             <td>
               <a class="ruleName"><%= RQ.htmlEncode(rule.getName()) %></a>
+              <span class="rule-type badge"><%= RQ.htmlEncode(ruleType) %></span>
               <div class="ruleDescription"><%= RQ.htmlEncode(rule.getDescription()) %></div>
             </td>
-            <td><%= RQ.htmlEncode(ruleType) %></td>
             <td class="status-cell"><%= RQ.htmlEncode(ruleStatus) %>
                 <span class="glyphicon glyphicon-ok-sign <%= ruleStatus %> <%= ruleType %> toggle-status-icon"
                       title="Click to toggle Rule Status">
