Issue #56 & Issue #57 - cleanup based on review comments

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,7 +29,9 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th><input type="checkbox" class="select-all-rules" title="Select All"/></th>
+              <th class="rule-selection-cell">
+                <input type="checkbox" class="select-all-rules-checkbox" title="Select All"/>
+              </th>
               <th>Name & Description</th>
               <th>Status</th>
               <th>Created on</th>
@@ -47,8 +49,8 @@
             date = date[1] + ' ' + date[2] + ', ' + date[3];
           %>
           <tr class="rule-item-row <%=ruleType.toLowerCase()%>" data-id="<%=id%>">
-            <td>
-              <input type="checkbox" class="select-rule"/>
+            <td class="rule-selection-cell">
+              <input type="checkbox" class="select-rule-checkbox"/>
             </td>
             <td>
               <a class="ruleName"><%= RQ.htmlEncode(rule.getName()) %></a>
