--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,7 +29,7 @@
         </div>
       </nav>
       <section class="rule-index">
-        <table class="table table-striped">
+        <table class="table">
           <thead>
             <tr>
               <th class="rule-selection-cell">
