--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -345,15 +345,15 @@
 	  <a id="forkme_banner" class="rq-banner" href="http://bit.ly/requestly-github-repo" target="_blank">View on GitHub</a>
     </div>
 
-    <div id ="page" class="page">
+    <div id="page" class="page">
       <div id="content" class="content"></div>
       <div id="footer" class="footer">
         <span class="message">
           <span class="footer-title">Like It! </span>
-          <span>Please Rate</span>
+          <span>Please rate</span>
           <span class="rq-white">Request</span><span class="rq-blue">ly</span>
-          <span>on Chrome Store. Thank you </span>
-		  <a id="Chrome_banner" class="rq-banner" href="https://chrome.google.com/webstore/search/requestly" target="_blank">Google Chrome</a>
+          <span> &nbsp;on </span>
+    		  <a id="chromestore_banner" class="rq-banner" href="http://bit.ly/chrome-store-reviews" target="_blank">Google Chrome Store</a>
         </span>
       </div>
     </div>
